# design_patterns

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: overview_.md  overview_techniques.md
doc/cmake/: target_oriented_builds.md
src/: CMakeLists.txt  main.cpp
src/behavioral/: CMakeLists.txt  behavioral_patterns.md
src/behavioral/chain_of_responsibility/: CMakeLists.txt
src/behavioral/chain_of_responsibility/src/: chain_of_responsibility.cpp
src/behavioral/command/: CMakeLists.txt
src/behavioral/command/src/: command.cpp
src/behavioral/interpreter/: CMakeLists.txt
src/behavioral/interpreter/includes/: interpreter.hpp
src/behavioral/interpreter/src/: interpreter.cpp
src/behavioral/iterator/: CMakeLists.txt
src/behavioral/iterator/src/: iterator.cpp
src/behavioral/mediator/: CMakeLists.txt
src/behavioral/mediator/includes/: mediator.hpp
src/behavioral/mediator/src/: mediator.cpp
src/behavioral/memento/: CMakeLists.txt
src/behavioral/memento/src/: memento.cpp
src/behavioral/observer/: CMakeLists.txt
src/behavioral/observer/src/: observer.cpp
src/behavioral/state/: CMakeLists.txt
src/behavioral/state/src/: state.cpp
src/behavioral/strategy/: CMakeLists.txt
src/behavioral/strategy/src/: strategy.cpp
src/behavioral/template_method/: CMakeLists.txt
src/behavioral/template_method/src/: template_method.cpp
src/behavioral/visitor/: CMakeLists.txt
src/behavioral/visitor/src/: visitor.cpp
src/creational/: CMakeLists.txt  creational_patterns.md
src/creational/abstract_factory/: CMakeLists.txt
src/creational/abstract_factory/includes/: abstract_factory.hpp
src/creational/abstract_factory/src/: abstract_factory.cpp
src/creational/builder/: CMakeLists.txt
src/creational/builder/src/: builder.cpp
src/creational/factory_method/: CMakeLists.txt
src/creational/factory_method/includes/: factory_method.hpp
src/creational/factory_method/src/: factory_method.cpp
src/creational/prototype/: CMakeLists.txt
src/creational/prototype/src/: prototype.cpp
src/creational/singleton/: CMakeLists.txt
src/creational/singleton/includes/: singleton.hpp
src/creational/singleton/src/: singleton.cpp
src/includes/: CMakeLists.txt  CommonAscii.h  CommonBinary.h  CommonClib.h  CommonDefines.h  CommonHeader.h  CommonLinux.h  CommonMacros.h  CommonPrint.h  CommonPriorities.h  CommonStaticAssert.h  CommonTypes.h
src/structural/: CMakeLists.txt  structural_patterns.md
src/structural/adapter/: CMakeLists.txt
src/structural/adapter/src/: adapter.cpp
src/structural/bridge/: CMakeLists.txt
src/structural/bridge/src/: bridge.cpp
src/structural/composite/: CMakeLists.txt
src/structural/composite/src/: composite.cpp
src/structural/decorator/: CMakeLists.txt
src/structural/decorator/src/: decorator.cpp
src/structural/facade/: CMakeLists.txt
src/structural/facade/src/: facade.cpp
src/structural/flyweight/: CMakeLists.txt
src/structural/flyweight/src/: flyweight.cpp
src/structural/proxy/: CMakeLists.txt
src/structural/proxy/src/: proxy.cpp
